--- a/data/cards/55888045.yaml
+++ b/data/cards/55888045.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>C<rt>카오스</rt></ruby><ruby>No.<rt>넘버즈</rt></ruby>106 용암장 자이언트 핸드 레드
   ko_rr:
   zh-TW:
-  zh-CN: 混沌No.106 熔岩掌 巨手·红掌
+  zh-CN: 混沌编号106 溶岩掌 巨人红手
 text:
   en: |-
     3 Level 5 monsters
@@ -46,9 +46,9 @@ text:
     이 카드가 "No." 라는 이름이 붙은 몬스터를 엑시즈 소재로 하고 있을 경우, 이하의 효과를 얻는다. ● 1턴에 1번, 마법 / 함정 / 효과 몬스터의 효과가 필드 위에서 발동했을 때에 발동한다. 이 카드의 엑시즈 소재를 1개 제거하고, 이 카드 이외의 필드 위에서 앞면 표시로 존재하는 모든 카드의 효과를 턴 종료시까지 무효로 한다.
   zh-TW:
   zh-CN: |-
-    5星怪兽×3
-    这张卡有名字带有「No.」的怪兽在作为XYZ素材的场合，得到以下效果。
-    ●1回合1次，魔法·陷阱·效果怪兽的效果在场上发动时发动。把这张卡1个XYZ素材取除，这张卡以外的场上表侧表示存在的全部卡的效果直到回合结束时无效。
+    等级5怪兽×3
+    ①：此卡持有"编号"怪兽作为超量素材的情况下，获得以下效果。
+    ●1回合1次，魔法・陷阱・怪兽的效果在场上发动时发动。去除此卡的1个超量素材，场上此卡以外的所有表侧表示卡的效果直至回合结束时为止无效化。
 card_type: Monster
 monster_type_line: Rock / Xyz / Effect
 attribute: EARTH
@@ -123,3 +123,8 @@ sets:
     set_name: Premium Pack Vol.9
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: MGP5-SC193
+    set_name: Mega Pack 05
+    rarities:
+    - Super Rare
