--- a/data/cards/53535814.yaml
+++ b/data/cards/53535814.yaml
@@ -53,7 +53,7 @@ sets:
   - set_number: MP22-EN066
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - Common
+    - Rare
   de:
   - set_number: LIOV-DE020
     set_name: Lightning Overdrive
@@ -62,7 +62,7 @@ sets:
   - set_number: MP22-DE066
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - Common
+    - Rare
   fr:
   - set_number: LIOV-FR020
     set_name: Lightning Overdrive
@@ -71,7 +71,7 @@ sets:
   - set_number: MP22-FR066
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - Common
+    - Rare
   it:
   - set_number: LIOV-IT020
     set_name: Lightning Overdrive
@@ -80,7 +80,7 @@ sets:
   - set_number: MP22-IT066
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - Common
+    - Rare
   pt:
   - set_number: LIOV-PT020
     set_name: Lightning Overdrive
@@ -89,7 +89,7 @@ sets:
   - set_number: MP22-PT066
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - Common
+    - Rare
   ja:
   - set_number: LIOV-JP020
     set_name: Lightning Overdrive
