--- a/data/cards/yugipedia900018.yaml
+++ b/data/cards/yugipedia900018.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control a "Kshatri-La" monster: You can Special Summon this card from your hand, also you cannot Special Summon from the Extra Deck for the rest of this turn, except Xyz Monsters. During your Main Phase, if this card was Normal or Special Summoned during this turn: You can banish 1 "Kshatri-La" card from your Deck, except "Kshatri-La Riseheart"; banish the top 3 cards of your opponent's Deck, face-down, and if you do, this card's Level becomes 7. You can only use each effect of "Kshatri-La Riseheart" once per turn.
+    If you control a "Kshatri-La" monster: You can Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Xyz Monsters. During your Main Phase, if this card was Normal or Special Summoned this turn: You can banish 1 "Kshatri-La" card from your Deck, except "Kshatri-La Riseheart"; banish the top 3 cards of your opponent's Deck, face-down, and if you do, this card's Level becomes 7. You can only use each effect of "Kshatri-La Riseheart" once per turn.
   de:
   es:
   fr:
