--- a/data/cards/yugipedia900022.yaml
+++ b/data/cards/yugipedia900022.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Main Phase (Quick Effect): You can Special Summon this card from your hand, and if you do, banish 1 "Kshatri-La" or "Tearlaments" card from your hand or GY. If this card is Normal or Special Summoned: You can send the top 3 cards of either Deck to the GY. If this card is sent to the GY by a card effect: You can send the top 2 cards of your Deck to the GY. You can only use each effect of "Tearlaments Kshatri-La" once per turn.
+    During the Main Phase (Quick Effect): You can Special Summon this card from your hand, and if you do, banish 1 "Kshatri-La" or "Tearlaments" card from your hand or GY. If this card is Normal or Special Summoned: You can send the top 3 cards of either player's Deck to the GY. If this card is sent to the GY by card effect: You can send the top 2 cards of your Deck to the GY. You can only use each effect of "Tearlaments Kshatri-La" once per turn.
   de:
   es:
   fr:
