--- a/data/cards/23469398.yaml
+++ b/data/cards/23469398.yaml
@@ -12,7 +12,7 @@ name:
   ko: 머시너즈 에어레이더
   ko_rr: Meosineojeu E-eoreideo
   zh-TW:
-  zh-CN: 机甲空袭兵
+  zh-CN: 机甲部队・空袭机
 text:
   en: |-
     You can discard 1 other "Machina" monster; Special Summon this card from your hand. During your opponent's turn (Quick Effect): You can target 1 Machine monster you control; Special Summon from your Deck, 1 "Machina" monster with a different name and an equal or lower Level than that monster, and if you do, destroy that targeted monster. You can only use each effect of "Machina Air Raider" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패에서 이 카드 이외의 "머시너즈" 몬스터 1장을 버리고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 상대 턴에, 자신 필드의 기계족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와는 카드명이 다르고, 그 몬스터의 레벨 이하의 레벨을 가지는 "머시너즈" 몬스터 1장을 덱에서 특수 소환하여, 대상 몬스터를 파괴한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：从手卡把这张卡以外的1只「机甲」怪兽丢弃才能发动。这张卡从手卡特殊召唤。
-    ②：对方回合，以自己场上1只机械族怪兽为对象才能发动。和那只怪兽卡名不同并持有那只怪兽的等级以下的等级的1只「机甲」怪兽从卡组特殊召唤，作为对象的怪兽破坏。
+    此卡名的①②效果1回合仅可各使用1次。①：从手牌将此卡以外的1只"机甲部队"怪兽舍弃可以发动。从手牌将此卡特殊召唤。②：在对手回合中，以自己场上的1只机械族怪兽为对象可以发动。从牌组将1只卡名与该怪兽不同、拥有该怪兽的等级以下等级的"机甲部队"怪兽特殊召唤，破坏对象怪兽。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: EARTH
@@ -79,6 +77,11 @@ sets:
     set_name: 'Structure Deck R: Machiners Command'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: TM01-SC003
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
