--- a/data/cards/87074380.yaml
+++ b/data/cards/87074380.yaml
@@ -12,7 +12,7 @@ name:
   ko: 머시너즈 카넬
   ko_rr: Meosineojeu Kanel
   zh-TW:
-  zh-CN: 机甲上校
+  zh-CN: 机甲部队・上校
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned by a card effect. (Quick Effect): You can target 1 Machine monster you control; destroy that Machine monster and all monsters your opponent controls with ATK less than or equal to it. If a face-up EARTH Machine monster(s) you control, except "Machina Citadel", is destroyed by battle or card effect while this card is in your GY: You can Special Summon this card. You can only use each effect of "Machina Citadel" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드는 통상 소환할 수 없으며, 카드 효과로만 특수 소환할 수 있다. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대 턴에, 자신 필드의 기계족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 기계족 몬스터와, 그 공격력 이하의 공격력을 가지는 상대 필드의 몬스터를 전부 파괴한다. ②: 이 카드가 묘지에 존재하는 상태에서, "머시너즈 카넬" 이외의 자신 필드의 앞면 표시인 기계족 / 땅 속성 몬스터가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 이 카드를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这张卡不能通常召唤，用卡的效果才能特殊召唤。这个卡名的①②的效果1回合各能使用1次。
-    ①：自己·对方回合，以自己场上1只机械族怪兽为对象才能发动。那只机械族怪兽和持有那个攻击力以下的攻击力的对方场上的怪兽全部破坏。
-    ②：这张卡在墓地存在的状态，「机甲上校」以外的自己场上的表侧表示的机械族·地属性怪兽被战斗·效果破坏的场合才能发动。这张卡特殊召唤。
+    此卡不可通常召唤，仅可以卡的效果特殊召唤。此卡名的①②效果1回合仅可各使用1次。①：在自己・对手回合中，以自己场上的1只机械族怪兽为对象可以发动。将该机械族怪兽和拥有其攻击力以下攻击力的对手场上的怪兽全部破坏。②：此卡存在于墓地的状态下，自己场上"机甲部队・上校"以外的表侧表示机械族・地属性怪兽因战斗・效果被破坏的情况下可以发动。将此卡特殊召唤。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: EARTH
@@ -79,6 +77,11 @@ sets:
     set_name: 'Structure Deck R: Machiners Command'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: TM01-SC001
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
