--- a/data/cards/69073023.yaml
+++ b/data/cards/69073023.yaml
@@ -12,7 +12,7 @@ name:
   ko: 무한기동요새 메가톤게일
   ko_rr: Muhan-gidong-yosae Megaton-geil
   zh-TW:
-  zh-CN: 无限起动要塞 百万吨百臂狂风
+  zh-CN: 无限起动要塞 百万吨盖尔
 text:
   en: |-
     3 Xyz Monsters
@@ -41,9 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     超量怪兽3只
-    这个卡名的②的效果1回合只能使用1次。
-    ①：这张卡只要在怪兽区域存在，不受这张卡以及超量怪兽以外的怪兽的效果影响，不会被和超量怪兽以外的怪兽的战斗破坏。
-    ②：以自己墓地1只超量怪兽和对方场上1张卡为对象才能发动。那只墓地的超量怪兽特殊召唤，那张对方的卡在下面重叠作为超量素材。这个效果的发动后，直到回合结束时对方受到的全部伤害变成一半。
+    此卡名的②效果1回合仅可使用1次。①：此卡只要存在于怪兽区域，不受此卡及超量怪兽以外怪兽的效果影响，不会因与超量怪兽以外怪兽的战斗被破坏。②：以自己墓地的1只超量怪兽和对手场上的1张卡为对象可以发动。将墓地的该超量怪兽特殊召唤，将该对手卡重叠在下方作为超量素材。此效果发动后，直至回合结束时为止，对手所受所有伤害变为一半。
 card_type: Monster
 monster_type_line: Machine / Link / Effect
 attribute: EARTH
@@ -115,6 +113,11 @@ sets:
     set_name: Special Pack Vol.1
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: TM01-SC035
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
