--- a/data/cards/yugipedia904715.yaml
+++ b/data/cards/yugipedia904715.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>鉄獣式強襲機動兵装改<rt>トライブリゲード・アームズ</rt></ruby>＂<ruby>Ｂｕｃｅｐｈａｌｕｓ<rt>ブーケファルス</rt></ruby><ruby>Ⅱ<rt>ツー</rt></ruby>＂
+  ja: <ruby>鉄獣式強襲機動兵装改<rt>トライブリゲード・アームズ</rt></ruby> ＂<ruby>Ｂｕｃｅｐｈａｌｕｓ<rt>ブーケファルス</rt></ruby> <ruby>Ⅱ<rt>ツー</rt></ruby>＂
   ja_romaji: Toraiburigēdo Āmuzu "Būkefarusu Tsū"
   ko:
   ko_rr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3+ Beast, Beast-Warrior, and/or Winged Beast monsters
-    Cannot be Special Summoned from the Extra Deck if you have 2 or less "Tri-Brigade" Spells/Traps in your GY. When you Special Summon a monster(s), your opponent cannot activate cards or effects. When a monster declares an attack: You can banish this card, also banish all cards your opponent controls. If this card is sent to the GY: You can send 1 Beast, Beast-Warrior, or Winged Beast monster from your Extra Deck to the GY. You an only use this effect of "Tri-Brigade Arms "Bucephalus II"" once per turn.
+    Cannot be Special Summoned from the Extra Deck if you have 2 or less "Tri-Brigade" Spells/Traps in your GY. When you Special Summon a monster(s), your opponent cannot activate cards or effects. When a monster declares an attack: You can banish this card, also banish all cards your opponent controls. If this card is sent to the GY: You can send 1 Beast, Beast-Warrior, or Winged Beast monster from your Extra Deck to the GY. You can only use this effect of "Tri-Brigade Arms "Bucephalus II"" once per turn.
   de:
   es:
   fr:
