--- a/data/cards/05399521.yaml
+++ b/data/cards/05399521.yaml
@@ -12,7 +12,7 @@ name:
   ko: 사운드 워리어 마이크스
   ko_rr:
   zh-TW:
-  zh-CN: 音响战士 麦克风
+  zh-CN: 音响战士 麦克疯
 text:
   en: |-
     You can Special Summon this card (from your hand) by removing 3 Symphonic Counters from your field. After you Normal or Special Summon this card, you can Normal Summon 1 monster during your Main Phase this turn, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.)
@@ -32,7 +32,7 @@ text:
     ①: 이 카드는 자신 필드의 음향 카운터를 3개 제거하고, 패에서 특수 소환할 수 있다. ②: 이 카드가 일반 소환 / 특수 소환에 성공한 턴에, 자신은 통상 소환 외에도 1번만, 자신 메인 페이즈에 몬스터를 1장 일반 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡可以把自己场上3个音响指示物取除，从手卡特殊召唤。②：这张卡召唤·特殊召唤成功的回合，自己在通常召唤外加上只有1次，自己主要阶段可以把1只怪兽召唤。
+    ①：去除自己场上的3个音响计数物，可从手牌将此卡特殊召唤。②：此卡召唤・特殊召唤成功的回合，自己在通常召唤外仅可追加1次，在自己的主要阶段召唤1只怪兽。
 card_type: Monster
 monster_type_line: Machine / Pendulum / Effect
 attribute: WIND
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 다른 한쪽 자신의 펜듈럼 존에 "사운드 워리어" 카드가 존재하지 않을 경우, 이 카드의 펜듈럼 스케일은 4 가 된다. ②: 자신 엔드 페이즈에, 제외되어 있는 자신의 "사운드 워리어" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ①：另一边的自己的灵摆区域没有「音响战士」卡存在的场合，这张卡的灵摆刻度变成4。②：自己结束阶段，以除外的1只自己的「音响战士」怪兽为对象才能发动。那只怪兽加入手卡。
+    ①：另一方自己的灵摆区域没有"音响战士"卡存在的情况下，此卡的灵摆刻度变为4。②：在自己的结束阶段，以自己1只被除外的"音响战士"怪兽为对象可以发动。将该怪兽加入手牌。
 series:
 - Symphonic Warrior
 - Warrior
@@ -119,6 +119,11 @@ sets:
     set_name: Extra Pack 2016
     rarities:
     - Common
+  zh-CN:
+  - set_number: TM01-SC059
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
