--- a/data/cards/12525049.yaml
+++ b/data/cards/12525049.yaml
@@ -12,7 +12,7 @@ name:
   ko: 사운드 워리어 기타스
   ko_rr:
   zh-TW:
-  zh-CN: 音响战士 吉他手
+  zh-CN: 音响战士 吉伊他
 text:
   en: |-
     When this card is Normal Summoned: You can target 1 "Symphonic Warrior" monster in your Graveyard; Special Summon it.
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 일반 소환에 성공했을 때, 자신 묘지의 "사운드 워리어" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡召唤成功时，以自己墓地1只「音响战士」怪兽为对象才能发动。那只怪兽特殊召唤。
+    ①：此卡召唤成功时，以自己墓地的1只"音响战士"怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Machine / Pendulum / Effect
 attribute: WIND
@@ -59,7 +59,7 @@ pendulum_effect:
     "사운드 워리어 기타스"의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패를 1장 버리고 발동할 수 있다. 덱에서 "사운드 워리어 기타스" 이외의 "사운드 워리어" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「音响战士 吉他手」的灵摆效果1回合只能使用1次。①：丢弃1张手卡才能发动。从卡组把「音响战士 吉他手」以外的1只「音响战士」怪兽特殊召唤。
+    此卡名的灵摆效果1回合仅可使用1次。①：舍弃1张手牌可以发动。从牌组将1只"音响战士 吉伊他"以外的"音响战士"怪兽特殊召唤。
 series:
 - Symphonic Warrior
 - Warrior
@@ -123,6 +123,11 @@ sets:
     set_name: Extra Pack 2015
     rarities:
     - Common
+  zh-CN:
+  - set_number: TM01-SC057
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
