--- a/data/cards/00146746.yaml
+++ b/data/cards/00146746.yaml
@@ -12,7 +12,7 @@ name:
   ko: 기관중련 앵거 너클
   ko_rr: Gigwanjungnyeon Aeng-geo Neokeul
   zh-TW:
-  zh-CN: 机关重联 愤怒钩舌
+  zh-CN: 机关重连 愤怒钩舌
 text:
   en: |-
     2 Machine monsters
@@ -53,9 +53,7 @@ text:
   zh-TW:
   zh-CN: |-
     机械族怪兽2只
-    这个卡名的①②的效果1回合只能有1次使用其中任意1个。这张卡不能作为连接素材。
-    ①：自己·对方的主要阶段，把自己的手卡·场上1只怪兽送去墓地，以自己墓地1只机械族·10星怪兽为对象才能发动。那只怪兽守备表示特殊召唤。这个效果特殊召唤的怪兽的效果无效化。
-    ②：这张卡在墓地存在的场合，把自己的手卡·场上1张卡送去墓地才能发动。这张卡特殊召唤。
+    此卡名的①②效果1回合1次，仅可使用其中1个。此卡不可作为连接素材。①：在自己・对手的主要阶段，将自己手牌・场上的1只怪兽送至墓地，以自己墓地的1只机械族・等级10怪兽为对象可以发动。以守备表示形式将该怪兽特殊召唤。以此效果特殊召唤的怪兽的效果无效化。②：此卡存在于墓地的情况下，将自己手牌・场上的1张卡送至墓地可以发动。将此卡特殊召唤。
 card_type: Monster
 monster_type_line: Machine / Link / Effect
 attribute: EARTH
@@ -110,6 +108,11 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: TM01-SC092
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
