--- a/data/cards/36734924.yaml
+++ b/data/cards/36734924.yaml
@@ -12,7 +12,7 @@ name:
   ko: 파란 눈의 무녀
   ko_rr:
   zh-TW:
-  zh-CN: 青色眼睛的巫女
+  zh-CN: 青之眼巫女
 text:
   en: |-
     When a card or effect is activated that targets this card (Quick Effect): You can send 1 Effect Monster you control to the GY, and if you do, add up to 2 "Blue-Eyes" monsters with different names from your Deck to your hand. If this card is in your GY: You can target 1 "Blue-Eyes" monster you control; shuffle it into the Deck, and if you do, Special Summon this card. You can only use 1 "Priestess with Eyes of Blue" effect per turn, and only once that turn.
@@ -32,7 +32,7 @@ text:
     "파란 눈의 무녀"의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 필드의 앞면 표시의 이 카드가 효과의 대상이 되었을 때에 발동할 수 있다. 자신 필드의 효과 몬스터 1장을 골라 묘지로 보내고, 덱에서 "푸른 눈" 몬스터를 2장까지 패에 넣는다(같은 이름의 카드는 1장까지). ②: 이 카드가 묘지에 존재할 경우, 자신 필드의 "푸른 눈" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 덱으로 되돌리고, 이 카드를 묘지에서 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「青色眼睛的巫女」的①②的效果1回合只能有1次使用其中任意1个。①：场上的表侧表示的这张卡成为效果的对象时才能发动。选自己场上1只效果怪兽送去墓地，从卡组把最多2只「青眼」怪兽加入手卡（同名卡最多1张）。②：这张卡在墓地存在的场合，以自己场上1只「青眼」怪兽为对象才能发动。那只怪兽回到持有者卡组，这张卡从墓地特殊召唤。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：场上表侧表示的此卡成为效果的对象时可以发动。挑选自己场上的1只效果怪兽送至墓地，从牌组将最多2只"青眼"怪兽加入手牌（同名卡最多1张）。②：此卡存在于墓地的情况下，以自己场上的1只"青眼"怪兽为对象可以发动。将该怪兽放回持有者的牌组，从墓地将此卡特殊召唤。
 card_type: Monster
 monster_type_line: Spellcaster / Tuner / Effect
 attribute: LIGHT
@@ -138,6 +138,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC005
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
