--- a/data/cards/84797028.yaml
+++ b/data/cards/84797028.yaml
@@ -12,7 +12,7 @@ name:
   ko: 기계장치의 밤－클락 워크 나이트－
   ko_rr: Gigyejangchi-ui Bam - Keulllak Wokeu Naiteu
   zh-TW:
-  zh-CN: 机械驱动之夜
+  zh-CN: 机械装置作响之夜
 text:
   en: |-
     All face-up monsters on the field become Machine monsters. All Machine monsters you control gain 500 ATK/DEF, also all Machine monsters your opponent controls lose 500 ATK/DEF. You can banish this card from your GY and discard 1 card; add 1 EARTH Machine monster from your Deck to your hand. You can only use this effect of "Clockwork Night" once per turn. You can only activate 1 "Clockwork Night" per turn.
@@ -27,7 +27,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없으며, 이 카드명의 ③의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 필드의 앞면 표시 몬스터는 기계족이 된다. ②: 자신 필드의 기계족 몬스터의 공격력 / 수비력은 500 올리고, 상대 필드의 기계족 몬스터의 공격력 / 수비력은 500 내린다. ③: 묘지의 이 카드를 제외하고, 패를 1장 버리고 발동할 수 있다. 덱에서 기계족 / 땅 속성 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡1回合只能发动1张，这个卡名的③效果1回合只能使用1次。①：场上的表侧表示怪兽变为机械族。②：自己场上的机械族怪兽的攻击力、守备力上升500，对手场上的机械族怪兽的攻击力、守备力下降500。③：可以将墓地的这张卡除外，舍弃1张手牌发动。从卡组将1只机械族·地属性怪兽加入手牌。
+    此卡名的卡1回合仅可发动1张，此卡名的③效果1回合仅可使用1次。①：场上的表侧表示怪兽变为机械族。②：自己场上的机械族怪兽的攻击力・守备力上升500，对手场上的机械族怪兽的攻击力・守备力下降500。③：将墓地的此卡除外，舍弃1张手牌可以发动。从牌组将1只机械族・地属性怪兽加入手牌。
 card_type: Spell
 property: Continuous
 sets:
@@ -43,7 +43,12 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: TM01-SC096
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg:
   ocg: Unlimited
 yugipedia_page_id: 881514
